--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="admin-ui" class="card hidden">
-        <h3>🛠️ PANEL MASTER</h3>
+        <h3>🛠️ PANEL ADMIN</h3>
         <div class="admin-section">
             <h4>1. Tabla de Apoyo</h4>
             <input type="text" id="info-sujeto" placeholder="Jugador">
