--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div id="game-ui" class="card hidden">
-        <img id="display-gif" src="https://media1.tenor.com/m/Ayzh8aM2iKAAAAAd/novak-djokovic-goat.gif" class="status-gif">
+        <img id="display-gif" src="Bilawal.jpeg" class="status-img">
         <h3 id="user-display"></h3>
 
         <div class="card" style="border:none; background:#fffde7; padding:10px; width:100%; margin:0;">
