--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
     <div id="auth-ui" class="card">
-        <img src="https://i.postimg.cc/FzXJKQQQ/Captura-de-pantalla-2026-02-02-113118.png" style="width:100%; border-radius:10px;">
+        <img src="bilalogo.jpeg" style="width:100%; border-radius:10px;">
         <input type="text" id="username" placeholder="@tu_instagram">
         <button onclick="entrar()">JUGAR</button>
         <button onclick="accesoAdmin()" style="background:#64748b; margin-top:10px; font-size:12px;">MODO ADMIN</button>
