--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <script>
         const SB_URL = 'https://hhkplxfousaoyjfpnllo.supabase.co';
-        const SB_KEY = 'TU_PUBLIC_KEY_AQUI'; // <- si ya funciona, deja la tuya
+        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhoa3BseGZvdXNhb3lqZnBubGxvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE4Njc4NTMsImV4cCI6MjA4NzQ0Mzg1M30.SPbJIeYBRm9yBdIZPXh3HSM88k73McLZIAzfhMZWEj0'; // <- si ya funciona, deja la tuya
         const { createClient } = supabase;
         const sb = createClient(SB_URL, SB_KEY);
 
