--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div style="margin-top:20px;">
             <h4>🏆 RANKING</h4>
             <div style="font-size:12px; color:#64748b; margin-top:-4px; margin-bottom:8px;">
-            Jugadores con racha suman +1 punto extra.
+            Jugadores con racha de 2 o más días suman +1 punto extra.
             <div id="ranking-list"></div>
         </div>
     </div>
