--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
             50% { background:#fee2e2; transform:translateY(-2px); }
             100% { background:transparent; transform:translateY(0); }
         }
+
+        .checklist {
+            background: white;
+            border: 1px solid #e2e8f0;
+            border-radius: 10px;
+            padding: 10px;
+        }
+        .check-item {
+            display:flex;
+            align-items:center;
+            gap:10px;
+            padding:6px 4px;
+            border-bottom: 1px solid #f1f5f9;
+            font-size: 14px;
+        }
+        .check-item:last-child { border-bottom: none; }
+        .check-item input { width:auto; margin:0; transform: scale(1.1); }
     </style>
 </head>
 <body>
@@ -152,7 +169,7 @@
 
         <div class="admin-section">
             <h4>3. Créditos semanales</h4>
-            <div class="small-help">Pulsa para permitir que los usuarios recojan sus 5 créditos (solo si tienen 0).</div>
+            <div class="small-help">Permite que los usuarios recojan sus créditos (solo si tienen 0). Si tienen racha (>=2) recibirán 6.</div>
             <button onclick="habilitarEntregaCreditos()" style="background:#0ea5e9">HABILITAR ENTREGA DE CRÉDITOS</button>
         </div>
 
@@ -174,12 +191,19 @@
             <textarea id="adm-o2" placeholder="Opciones 1 PTO (Ej: Messi, Cristiano)"></textarea>
             <textarea id="adm-o3" placeholder="Opciones 3 PTOS (Ej: 2-1, 3-0)"></textarea>
             <button onclick="lanzar()" style="background:#2563eb">ACTIVAR RONDA</button>
+        </div>
 
-            <hr>
+        <div class="admin-section">
+            <h4>5. Validar ganadores (checkbox)</h4>
+            <div class="small-help">Se cargan automáticamente desde la ronda activa. Marca los correctos y valida.</div>
 
-            <input type="text" id="win2" placeholder="Ganadores 1 PTO (comas)">
-            <input type="text" id="win3" placeholder="Ganadores 3 PTOS (comas)">
-            <button onclick="puntuar()" style="background:#f59e0b">VALIDAR GANADORES</button>
+            <div style="margin-top:10px; font-weight:bold;">Vale 1 punto</div>
+            <div id="adm-win2-list" class="checklist"></div>
+
+            <div style="margin-top:10px; font-weight:bold;">Vale 3 puntos</div>
+            <div id="adm-win3-list" class="checklist"></div>
+
+            <button onclick="puntuar()" style="background:#f59e0b; margin-top:12px;">VALIDAR GANADORES</button>
         </div>
 
         <button onclick="location.reload()" style="background:black">CERRAR PANEL</button>
@@ -191,7 +215,7 @@
         <div id="wallet-display" class="wallet">💼 0 créditos</div>
 
         <button id="btn-recoger-creditos" class="hidden" onclick="recogerCreditos()" style="background:#0ea5e9; margin-top:10px;">
-            RECOGER CRÉDITOS (5)
+            RECOGER CRÉDITOS
         </button>
 
         <div id="estado-ronda-box" style="margin-bottom:10px;"></div>
@@ -217,7 +241,7 @@
         <div style="margin-top:20px;">
             <h4>🏆 RANKING</h4>
             <div style="font-size:12px; color:#64748b; margin-top:-4px; margin-bottom:8px;">
-                Jugadores con racha de 2 o más semanas suman +1 punto extra.
+                Jugadores con racha (>=2) reciben +1 crédito extra esa semana.
             </div>
             <div id="ranking-list"></div>
         </div>
@@ -237,11 +261,9 @@
         let countdownIntervalId = null;
         let realtimeChannel = null;
 
-        // Cache para selects admin
         let __statsCache = [];
         let __usersCache = [];
 
-        // ---------- Helpers ----------
         function escapeHtml(str) {
             return String(str ?? "")
                 .replace(/&/g, "&amp;")
@@ -252,10 +274,7 @@
         }
 
         function splitOpciones(txt) {
-            return (txt || "")
-                .split(',')
-                .map(x => x.trim())
-                .filter(Boolean);
+            return (txt || "").split(',').map(x => x.trim()).filter(Boolean);
         }
 
         function parseCierreLocalToISO(fecha, hora) {
@@ -385,7 +404,6 @@
                     arrows[j.nombre] = { txt: '', cls: 'arrow-same', flash: '' };
                 }
             }
-
             return arrows;
         }
 
@@ -398,7 +416,7 @@
             list.innerHTML = conPos.map(j => {
                 const medal = medalMap[j.nombre] || '';
                 const arrow = arrowMap[j.nombre] || { txt: '', cls: 'arrow-same', flash: '' };
-                const streakBadge = (j.racha_actual >= 1) ? `<span class="badge-streak">🔥 ${j.racha_actual}</span>` : '';
+                const streakBadge = (j.racha_actual >= 2) ? `<span class="badge-streak">🔥 ${j.racha_actual}</span>` : '';
 
                 return `
                     <div class="ranking-row ${arrow.flash}">
@@ -423,14 +441,12 @@
         function actualizarSelectsAdmin() {
             if (!esAdmin) return;
 
-            // Players (estadisticas)
             const selP = document.getElementById('adm-select-player');
             const currentP = selP.value;
             selP.innerHTML = `<option value="">(Nuevo jugador)</option>` + __statsCache
                 .map(s => `<option value="${escapeHtml(s.sujeto)}">${escapeHtml(s.sujeto)}</option>`).join('');
             selP.value = currentP || '';
 
-            // Users (jugadores)
             const selU = document.getElementById('adm-select-user');
             const currentU = selU.value;
             selU.innerHTML = `<option value="">(Selecciona un usuario)</option>` + __usersCache
@@ -438,7 +454,6 @@
             selU.value = currentU || '';
         }
 
-        // ---------- Admin dropdown handlers ----------
         function cargarPlayerSeleccionado() {
             const sujeto = document.getElementById('adm-select-player').value;
             if (!sujeto) {
@@ -474,10 +489,7 @@
             if (!confirm(`¿Eliminar al jugador "${sujeto}" de la tabla de apoyo?`)) return;
 
             const { error } = await sb.from('estadisticas').delete().eq('sujeto', sujeto);
-            if (error) {
-                console.error(error);
-                return alert("Error eliminando jugador.");
-            }
+            if (error) { console.error(error); return alert("Error eliminando jugador."); }
             alert("Jugador eliminado ✅");
             document.getElementById('adm-select-player').value = "";
             cargarPlayerSeleccionado();
@@ -490,10 +502,7 @@
             if (!confirm(`¿Eliminar al usuario "@${nom}" del sistema?`)) return;
 
             const { error } = await sb.from('jugadores').delete().eq('nombre', nom);
-            if (error) {
-                console.error(error);
-                return alert("Error eliminando usuario.");
-            }
+            if (error) { console.error(error); return alert("Error eliminando usuario."); }
             alert("Usuario eliminado ✅");
             document.getElementById('adm-select-user').value = "";
             cargarUserSeleccionado();
@@ -508,34 +517,50 @@
             if (Number.isNaN(val)) return alert("Introduce un número válido.");
 
             const { error } = await sb.from('jugadores').update({ puntos: val }).eq('nombre', nom);
-            if (error) {
-                console.error(error);
-                return alert("Error actualizando puntos.");
-            }
+            if (error) { console.error(error); return alert("Error actualizando puntos."); }
             alert("Puntos actualizados ✅");
             refrescar();
         }
 
         async function habilitarEntregaCreditos() {
             const { error } = await sb.from('estado_juego').update({ creditos_habilitados: true }).eq('id', 1);
-            if (error) {
-                console.error(error);
-                return alert("Error habilitando entrega de créditos.");
-            }
+            if (error) { console.error(error); return alert("Error habilitando entrega de créditos."); }
             alert("Entrega de créditos habilitada ✅");
             refrescar();
         }
 
-        // ---------- App ----------
+        function renderAdminValidacion(jg) {
+            const box2 = document.getElementById('adm-win2-list');
+            const box3 = document.getElementById('adm-win3-list');
+            if (!esAdmin) return;
+
+            if (!jg || (!jg.opciones2?.length && !jg.opciones3?.length)) {
+                box2.innerHTML = `<div style="font-size:12px; color:#64748b;">No hay ronda activa.</div>`;
+                box3.innerHTML = `<div style="font-size:12px; color:#64748b;">No hay ronda activa.</div>`;
+                return;
+            }
+
+            box2.innerHTML = (jg.opciones2 || []).map((o, idx) => `
+                <label class="check-item">
+                    <input type="checkbox" name="admwin2" value="${escapeHtml(o)}">
+                    <span>${escapeHtml(o)}</span>
+                </label>
+            `).join('') || `<div style="font-size:12px; color:#64748b;">Sin opciones.</div>`;
+
+            box3.innerHTML = (jg.opciones3 || []).map((o, idx) => `
+                <label class="check-item">
+                    <input type="checkbox" name="admwin3" value="${escapeHtml(o)}">
+                    <span>${escapeHtml(o)}</span>
+                </label>
+            `).join('') || `<div style="font-size:12px; color:#64748b;">Sin opciones.</div>`;
+        }
+
         async function entrar() {
             miNombre = document.getElementById('username').value.trim().toLowerCase().replace('@','');
             if(!miNombre) return;
 
             const { error } = await sb.from('jugadores').upsert({ nombre: miNombre }, { onConflict: 'nombre' });
-            if (error) {
-                console.error(error);
-                return alert("Error al entrar. Revisa Supabase (RLS/policies).");
-            }
+            if (error) { console.error(error); return alert("Error al entrar. Revisa Supabase (RLS/policies)."); }
 
             document.getElementById('auth-ui').classList.add('hidden');
             document.getElementById('game-ui').classList.remove('hidden');
@@ -577,10 +602,7 @@
                 { sujeto: s, dato1: g, dato2: a, dato3: r },
                 { onConflict: 'sujeto' }
             );
-            if (error) {
-                console.error(error);
-                return alert("Error guardando jugador.");
-            }
+            if (error) { console.error(error); return alert("Error guardando jugador."); }
 
             alert("Guardado ✅");
             document.getElementById('adm-select-player').value = s;
@@ -589,25 +611,20 @@
 
         async function recogerCreditos() {
             const { data: yo, error: eYo } = await sb.from('jugadores').select('*').eq('nombre', miNombre).single();
-            if (eYo) {
-                console.error(eYo);
-                return alert("Error leyendo tu usuario.");
-            }
+            if (eYo) { console.error(eYo); return alert("Error leyendo tu usuario."); }
             if ((yo?.creditos ?? 0) > 0) return alert("Ya tienes créditos. Primero gástalos.");
 
             const { data: jg, error: eJg } = await sb.from('estado_juego').select('creditos_habilitados').eq('id',1).single();
-            if (eJg) {
-                console.error(eJg);
-                return alert("Error comprobando entrega de créditos.");
-            }
+            if (eJg) { console.error(eJg); return alert("Error comprobando entrega de créditos."); }
             if (!jg?.creditos_habilitados) return alert("La entrega de créditos no está habilitada.");
 
-            const { error } = await sb.from('jugadores').update({ creditos: 5 }).eq('nombre', miNombre);
-            if (error) {
-                console.error(error);
-                return alert("Error recogiendo créditos.");
-            }
-            alert("Has recogido 5 créditos ✅");
+            const racha = yo?.racha_actual ?? 0;
+            const cantidad = (racha >= 2) ? 6 : 5;
+
+            const { error } = await sb.from('jugadores').update({ creditos: cantidad }).eq('nombre', miNombre);
+            if (error) { console.error(error); return alert("Error recogiendo créditos."); }
+
+            alert(`Has recogido ${cantidad} créditos ✅`);
             refrescar();
         }
 
@@ -626,6 +643,9 @@
             __statsCache = st || [];
             __usersCache = rk || [];
             actualizarSelectsAdmin();
+
+            // Admin: render checkboxes validación con opciones actuales
+            renderAdminValidacion(jg || null);
 
             document.getElementById('info-content-user').innerHTML = (__statsCache || []).map(s =>
                 `<tr>
@@ -675,8 +695,16 @@
                         r3.innerHTML = `Esperando validación del admin...`;
                         btn.classList.add('hidden');
                     } else {
-                        r2.innerHTML = `Apuesta enviada ✅ (1pto: ${yo?.apuesta2 ?? 0} / 3ptos: ${yo?.apuesta3 ?? 0})`;
-                        r3.innerHTML = `Créditos restantes: ${yo?.creditos ?? 0}`;
+                        const b2 = yo?.apuesta2 ?? 0;
+                        const b3 = yo?.apuesta3 ?? 0;
+
+                        r2.innerHTML = `✅ Apuesta enviada<br>
+                                        Créditos apostados: <b>${b2}</b><br>
+                                        Ganancia potencial: <b>${b2 * 1}</b> pts`;
+                        r3.innerHTML = `✅ Apuesta enviada<br>
+                                        Créditos apostados: <b>${b3}</b><br>
+                                        Ganancia potencial: <b>${b3 * 3}</b> pts`;
+
                         btn.classList.add('hidden');
                     }
                 } else {
@@ -713,13 +741,13 @@
                     ronda_id: 0,
                     ronda_num: nuevaRondaNum,
                     cierre_votacion: cierreISO,
-                    creditos_habilitados: false   // <- IMPORTANTÍSIMO: admin decide cuándo habilitar
+                    creditos_habilitados: false
                 })
                 .eq('id', 1);
 
             if (e1) { console.error(e1); return alert("Error activando ronda."); }
 
-            // limpiamos selecciones + apuestas (pero NO tocamos créditos)
+            // limpiamos selecciones + apuestas (NO tocamos créditos)
             const { error: e2 } = await sb.from('jugadores').update({
                 seleccion2: null,
                 seleccion3: null,
@@ -729,7 +757,7 @@
 
             if (e2) { console.error(e2); return alert("Ronda creada, pero error al limpiar selecciones."); }
 
-            alert(`Ronda ${nuevaRondaNum} iniciada.\nCierre: ${formatFechaHora(cierreISO)}\nRecuerda habilitar créditos si quieres.`);
+            alert(`Ronda ${nuevaRondaNum} iniciada.\nCierre: ${formatFechaHora(cierreISO)}\nRecuerda habilitar créditos.`);
         }
 
         async function votar() {
@@ -748,20 +776,20 @@
             if (credits === 0) {
                 return alert("No tienes créditos. Si el admin habilitó la entrega, pulsa 'Recoger créditos'.");
             }
-            if (credits !== 5) {
-                // si por alguna razón no es 5, forzamos regla del sistema
-                return alert("Tus créditos deben ser 5 para apostar esta semana. (Vuelve a recoger cuando tengas 0).");
+            if (credits !== 5 && credits !== 6) {
+                return alert("Tus créditos deben ser 5 o 6 para apostar esta semana.");
             }
 
-            let bet1 = prompt("¿Cuántos créditos apuestas al pronóstico de 1 punto? (mín 1, máx 4)");
+            const total = credits;
+            let bet1 = prompt(`¿Cuántos créditos apuestas al pronóstico de 1 punto? (mín 1, máx ${total - 1})`);
             if (bet1 === null) return;
             bet1 = parseInt(bet1, 10);
-            if (Number.isNaN(bet1) || bet1 < 1 || bet1 > 4) return alert("Debe ser un número entre 1 y 4.");
+            if (Number.isNaN(bet1) || bet1 < 1 || bet1 > (total - 1)) return alert(`Debe ser un número entre 1 y ${total - 1}.`);
 
-            const bet3 = 5 - bet1; // siempre 1..4
-            if (bet3 < 1 || bet3 > 4) return alert("La apuesta al pronóstico de 3 puntos debe quedar entre 1 y 4.");
+            const bet3 = total - bet1; // siempre >=1
+            if (bet3 < 1) return alert("Debes apostar al menos 1 crédito al pronóstico de 3 puntos.");
 
-            const ok = confirm(`Confirmar apuesta:\n- 1 punto: ${bet1} créditos\n- 3 puntos: ${bet3} créditos\nTotal: 5`);
+            const ok = confirm(`Confirmar apuesta:\n- 1 punto: ${bet1} créditos (potencial: ${bet1 * 1} pts)\n- 3 puntos: ${bet3} créditos (potencial: ${bet3 * 3} pts)\nTotal: ${total}`);
             if (!ok) return;
 
             const { error } = await sb.from('jugadores').update({
@@ -772,13 +800,14 @@
                 creditos: 0
             }).eq('nombre', miNombre);
 
-            if (error) {
-                console.error(error);
-                return alert("Error al enviar apuesta.");
-            }
+            if (error) { console.error(error); return alert("Error al enviar apuesta."); }
         }
 
         async function puntuar() {
+            // obtiene checks seleccionados del admin (si no es admin, no hace nada)
+            const w2 = Array.from(document.querySelectorAll('input[name="admwin2"]:checked')).map(x => x.value);
+            const w3 = Array.from(document.querySelectorAll('input[name="admwin3"]:checked')).map(x => x.value);
+
             const { data: jg, error: eJg } = await sb.from('estado_juego').select('*').eq('id', 1).single();
             if (eJg) { console.error(eJg); return alert("Error leyendo estado de ronda."); }
 
@@ -787,16 +816,13 @@
                 if (!seguir) return;
             }
 
-            const w2 = splitOpciones(document.getElementById('win2').value);
-            const w3 = splitOpciones(document.getElementById('win3').value);
-
             const { error } = await sb.rpc('validar_y_puntuar', { c2: w2, c3: w3 });
             if (error) {
                 console.error("RPC validar_y_puntuar error:", error);
                 return alert(`Error validando ganadores: ${error.message}`);
             }
 
-            alert("Puntos asignados (con apuestas) y rachas actualizadas ✅");
+            alert("Ganadores validados ✅ (puntos por apuestas + racha actualizada)");
         }
 
         function iniciar() {
