--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         }
 
         function accesoAdmin() {
-            if(prompt("Clave:") === "TrustTheBlan") {
+            if(prompt("Clave:") === "trusttheblan") {
                 esAdmin = true;
                 document.getElementById('auth-ui').classList.add('hidden');
                 document.getElementById('admin-ui').classList.remove('hidden');
